# tui-verifier

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: pi_codex_operator.recipe.json  pi_help.recipe.json  pi_list.recipe.json  pi_version.recipe.json
examples/artifacts/: README.md  latest-operator-report.md  latest-report.md
examples/artifacts/20260724-004035-844625-pi-codex-operator-default/: agent_outcome.json  agent_prompt.md  agent_transcript.md  report.md  result.json  session.cast
examples/artifacts/20260724-004035-844625-pi-codex-operator-default/steps/: 01-codex-operator.txt
examples/artifacts/20260724-004051-177323-pi-help-default/: report.md  result.json  session.cast
examples/artifacts/20260724-004051-177323-pi-help-default/steps/: 01-1-wait_for_text.txt
examples/artifacts/20260724-004054-385805-pi-list-default/: report.md  result.json  session.cast
examples/artifacts/20260724-004056-344321-pi-version-default/: report.md  result.json  session.cast
examples/artifacts/pi-help/: report.md  result.json  session.cast
examples/artifacts/pi-list/: report.md  result.json  session.cast
examples/artifacts/pi-version/: final.txt  report.md  result.json  session.cast
tests/: test_agent_driven.py  test_runner.py  test_screen.py  test_stack_design.py
tui_verifier/: __init__.py  agent_driven.py  before_after.py  build_info.py  cast.py  cli.py  evidence.py  models.py  registry.py  renderer.py  report.py  runner.py  screen.py  session.py
